--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p><a href="https://www.youtube.com/@amoskmusic">www.youtube.com/@amoskmusic</a></p>
 
       <h3>Amy Endmi</h3>
-        <p><a href="https:www.youtube.com/@amyendmi545">www.youtube.com/@amyendmi545</a></p>
+        <p><a href="https://www.youtube.com/@amyendmi545">www.youtube.com/@amyendmi545</a></p>
 
       <h3>Mirror Eater</h3>
         <p><a href="https://youtu.be/D0ZjsXHerQ8">https://youtu.be/D0ZjsXHerQ8</a></p>
